# kanidm-provision

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  flake.nix  release.toml  statix.toml
.github/workflows/: test.yml
patches/: 1.4.0-recover-account.patch  v1.1.0-rc.16.patch
src/: client.rs  main.rs  state.rs
tests/: kanidm-provision.nix  kanidm.nix  lib.nix
