[package]
name = "kanidm-provision"
version = "1.0.1"
edition = "2021"
authors = ["oddlama <oddlama@oddlama.org>"]
description = "A small utility to help with kanidm provisioning"
license = "MIT"
publish = false

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
color-eyre = "0.6.2"
reqwest = { version = "0.11.24", default-features = false, features = ["json", "rustls-tls", "rustls", "blocking"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
