[package]
name = "kanidm-provision"
version = "1.1.2"
edition = "2021"
authors = ["oddlama <oddlama@oddlama.org>"]
description = "A small utility to help with kanidm provisioning"
license = "MIT"
publish = false

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
color-eyre = "0.6.3"
reqwest = { version = "0.12.7", default-features = false, features = ["json", "rustls-tls", "blocking", "multipart"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
tokio = { version = "1.39.3", features = ["full"] }
