[package]
name = "kanidm-provision"
version = "1.1.2"
edition = "2021"
authors = ["oddlama <oddlama@oddlama.org>"]
description = "A small utility to help with kanidm provisioning"
license = "MIT"
publish = false

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
color-eyre = "0.6.5"
reqwest = { version = "0.12.19", default-features = false, features = ["json", "rustls-tls-native-roots", "blocking", "multipart"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
